# DeepTrace

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  README.md  rustfmt.toml
agent/: Cargo.toml  build.rs
agent/config/: README.md  default.toml
agent/src/: attach.rs  cache.rs  error.rs  lib.rs  main.rs  process.rs  span.rs  state.rs  utils.rs
agent/src/app/: api.rs  context.rs  lifecycle.rs  mod.rs  module.rs  runtime.rs
agent/src/common/: Cargo.toml  lib.rs  protocol.rs  structs.rs
agent/src/common/src/: consts.rs  lib.rs  mask.rs  message.rs  packet.rs  socket.rs  structs.rs
agent/src/common/src/protocols/: l4.rs  l7.rs  mod.rs
agent/src/common/trace-common/: Cargo.toml  README.md
agent/src/common/trace-common/src/: constants.rs  message.rs  structs.rs
agent/src/config/: access.rs  agent.rs  api.rs  app.rs  change.rs  error.rs  mod.rs  module.rs  trace.rs
agent/src/config/sender/: elastic.rs  flatfile.rs  mod.rs
agent/src/constants/: linux.rs  mod.rs
agent/src/ebpf/: Cargo.toml  README.md  build.rs  memcached.result
agent/src/ebpf/.cargo/: config.toml
agent/src/ebpf/provenance/src/: main.rs
agent/src/ebpf/src/: consts.rs  lib.rs  main.rs  maps.rs  structs.rs  utils.rs  vmlinux.rs
agent/src/ebpf/src/network/: mod.rs  process.rs  read.rs  readv.rs  recvfrom.rs  recvmmsg.rs  recvmsg.rs  sendmmsg.rs  sendmsg.rs  sendto.rs  write.rs  writev.rs
agent/src/ebpf/src/protocols/: infer.rs  mod.rs  utils.rs
agent/src/ebpf/src/protocols/dns/: constants.rs  flag.rs  mod.rs  opcode.rs  parse.rs  rcode.rs
agent/src/ebpf/src/protocols/http1/: constants.rs  mod.rs  parse.rs  t.rs
agent/src/ebpf/src/protocols/memcached/: mod.rs  parse.rs
agent/src/ebpf/src/protocols/mongodb/: mod.rs  parse.rs
agent/src/ebpf/src/protocols/mysql/: mod.rs
agent/src/ebpf/src/protocols/redis/: mod.rs  parse.rs
agent/src/ebpf/src/protocols/thrift/: mod.rs
agent/src/ebpf/src/protocols/thrift/parse/: binary.rs
agent/src/ebpf/src/structs/: buffer.rs  mod.rs  socket.rs
agent/src/ebpf/src/utils/: mod.rs
agent/src/ebpf/trace/: Cargo.toml
agent/src/ebpf/trace/src/: constants.rs  lib.rs  main.rs  maps.rs  vmlinux.rs
agent/src/ebpf/trace/src/network/: close.rs  mod.rs  process.rs  readv.rs  sendmsg.rs  socket.rs  write.rs
agent/src/ebpf/trace/src/protocols/: README.md  infer.rs  mod.rs  utils.rs
agent/src/ebpf/trace/src/protocols/dns/: constants.rs  mod.rs  parse.rs
agent/src/ebpf/trace/src/protocols/http1/: constants.rs  mod.rs
agent/src/ebpf/trace/src/protocols/memcached/: constants.rs  mod.rs  opcode.rs  parse.rs
agent/src/ebpf/trace/src/protocols/mongodb/: mod.rs  parse.rs
agent/src/ebpf/trace/src/protocols/redis/: mod.rs  parse.rs
agent/src/ebpf/trace/src/protocols/thrift/: constants.rs  parse.rs
agent/src/ebpf/trace/src/protocols/thrift/parse/: binary.rs
agent/src/ebpf/trace/src/structs/: args.rs  buffer.rs  socket.rs
agent/src/ebpf/trace/src/utils/: mod.rs
agent/src/ebpf/trace/src/utils/tests/: mod.rs
agent/src/protocol/: README.md
agent/src/provenance/common/: Cargo.toml
agent/src/provenance/ebpf/: Cargo.toml
agent/src/sender/: encoder.rs  error.rs  mod.rs  module.rs  strategy.rs
agent/src/sender/backend/: mod.rs
agent/src/sender/backend/elastic/: error.rs  mod.rs  transport.rs  utils.rs
agent/src/sender/backend/flat_file/: error.rs  mod.rs  transport.rs  utils.rs
agent/src/sender/backend/remote/: mod.rs
agent/src/trace/: attach.rs  error.rs  loader.rs  mod.rs  module.rs  utils.rs
agent/src/trace/common/: Cargo.toml
agent/src/trace/common/src/: lib.rs  structs.rs
agent/src/trace/common/src/protocols/: l4.rs  l7.rs
agent/src/trace/ebpf/: Cargo.toml  build.rs
agent/src/trace/ebpf/src/: lib.rs  main.rs  vmlinux.rs
agent/src/trace/ebpf/src/network/: process.rs  read.rs  recvfrom.rs  recvmmsg.rs  recvmsg.rs  sendmmsg.rs  sendto.rs  write.rs  writev.rs
agent/src/trace/ebpf/src/protocols/: infer.rs  mod.rs
agent/src/trace/ebpf/src/protocols/dns/: flag.rs  header.rs  mod.rs  opcode.rs  rcode.rs
agent/src/trace/ebpf/src/protocols/http1/: mod.rs  parse.rs
agent/src/trace/ebpf/src/protocols/memcached/: header.rs  mod.rs  status.rs
agent/src/trace/ebpf/src/protocols/mongodb/: constants.rs  header.rs  mod.rs  opcode.rs
agent/src/trace/ebpf/src/protocols/mysql/: com.rs  constants.rs  header.rs  mod.rs  parse.rs
agent/src/trace/ebpf/src/protocols/redis/: mod.rs  parse.rs
agent/src/trace/ebpf/src/protocols/redis/tests/: mod.rs
agent/src/trace/ebpf/src/protocols/tests/: utils.py
agent/src/trace/ebpf/src/protocols/tests/memcached/result/: actual.txt
agent/src/trace/ebpf/src/protocols/tests/mongodb/result/: ebpf.txt  expected.txt
agent/src/trace/ebpf/src/protocols/tests/redis/result/: actual.txt
agent/src/trace/ebpf/src/protocols/thrift/: kind.rs  mod.rs
agent/src/trace/ebpf/src/protocols/thrift/parse/: compact.rs
agent/src/trace/ebpf/src/structs/: mod.rs
agent/src/trace/ebpf/src/utils/: mod.rs
agent/src/trace/ebpf/src/utils/tests/: pcap.rs
agent/src/trace/span/: cache.rs  construct.rs  mod.rs  module.rs
agent/src/trace/tests/: Cargo.toml
agent/src/trace/tests/src/: lib.rs  lifecycle.rs
agent/src/trace/tests/src/container/: mod.rs  redis.rs
agent/src/trace/user/: Cargo.toml
agent/src/trace/user/src/: internal.rs  lib.rs
agent/src/trace/user/src/message/: mod.rs
agent/src/user/trace/: Cargo.toml
agent/src/user/trace/src/: internal.rs  lib.rs
agent/src/user/trace/src/message/: mod.rs
agent/src/user/trace/src/span/: construct.rs  mod.rs  output.rs
agent/src/utils/: mod.rs  sys.rs
deployment/: deployment.sh
deployment/docker/: Dockerfile  Workload.yaml  redis.yaml
docs/: Hooks.md  Maps.md  Overhead.md  Overview.md  README.md  Structures.md
docs/eBPF/: Overhead.md  Overview.md  Structures.md
docs/tests/: README.md  eBPF_functionality.md  eBPF_overhead.md  eBPF_protocol_infer.md  span_construct.md
docs/usage/: Usage.md
scripts/: compile.sh  docker_pids.sh  install.sh  load_docker_images.sh  run.sh
server/: README.md
tests/: Cargo.toml  README.md
(+251 files in other folders)
