[package]
name = "agent"
keywords = ["ebpf", "kernel", "linux", "network", "cloud"]
description = "The DeepTrace project aims to provide deep observability for complex cloud-native applications."
readme = "README.md"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
trace = { path = "src/user/trace" }

trace_common = { path = "src/common/trace-common", features = ["user"] }
provenance_common = { path = "src/common/provenance-common", features = [] }

anyhow = { workspace = true, default-features = true }
aya = { workspace = true }
aya-log = { workspace = true }
bollard = { workspace = true}
bytes = { workspace = true, default-features = true }
# core_affinity = { version = "0.8.3", default-features = false }
# crossbeam-channel = { version = "0.5.15", default-features = false }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
clap = { workspace = true, features = ["derive"] }
kube = { version = "0.99.0", features = ["ws"] }
k8s-openapi = { version = "0.24.0", features = ["v1_29"] }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "net", "signal", "fs", "io-std"] }
serde = { workspace = true, features = ["derive"] }

[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
# TODO(https://github.com/rust-lang/cargo/issues/12375): this should be an artifact dependency, but
# it's not possible to tell cargo to use `-Z build-std` to build it. We cargo-in-cargo in the build
# script to build this, but we want to teach cargo about the dependecy so that cache invalidation
# works properly.
#
# Note also that https://github.com/rust-lang/cargo/issues/10593 occurs when `target = ...` is added
# to an artifact dependency; it seems possible to work around that by setting `resolver = "1"` in
# Cargo.toml in the workspace root.
#
# Finally note that *any* usage of `artifact = ...` in *any* Cargo.toml in the workspace breaks
# workflows with stable cargo; stable cargo outright refuses to load manifests that use unstable
# features.
trace-ebpf = { path = "src/ebpf/trace" }
provenance-ebpf = { path = "src/ebpf/provenance" }

[[bin]]
name = "agent"
path = "src/main.rs"
