[package]
name = "mercury-ebpf"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
bitflags = { workspace = true }
mercury-common = { path = "../common" }
memchr = { workspace = true, default-features = false }
nom = { workspace = true, default-features = false }

[dev-dependencies]
pcap = { version = "2.2.0" }
pnet = { version = "0.35.0" }

[build-dependencies]
which = { workspace = true }

[[bin]] 
name = "mercury"
path = "src/main.rs"
