[package]
name = "trace"
version = "0.1.0"
readme = "README.md"

authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
dashmap = { version = "7.0.0-rc2", default-features = false }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
trace_common = { path = "../../common/trace-common", features = ["user"] }